# Multi-tenant-LeaveManagmentSystem

./: .env  main.py  pyproject.toml
migrations/versions/: 55590340105c_rejected_by.py  7f813ef8be86_updation_in_the_models_od_leave_balnce_.py  de1f91b07e55_leaverequest.py  fbe59a7e144d_leavebalance.py
src/api/v1/endpoints/: leave_endpoints.py  tenant_endpoints.py  user_endpoints.py
src/api/v1/router/: routes.py
src/core/: config.py  security.py
src/db/: database.py  dependencies.py
src/db/events/: user_events.py
src/db/models/: __init__.py  leavebalance_model.py  leaverequest_model.py  user_model.py
src/schemas/: LeaveBalance_schema.py  LeaveReq_schema.py  user_schemas.py
src/services/: auth_services.py  leave_services.py
src/utils/: auth_utils.py
